--- a/BotConfig.template.json
+++ b/BotConfig.template.json
@@ -1,3 +1,8 @@
 {
-    "DiscordToken":"REDACTED"
+    "BotConfig":{
+        "DiscordToken":"REDACTED",
+        "CommandPrefixes":[
+            "::"
+        ]
+    }
 }
