--- a/homiebot.csproj
+++ b/homiebot.csproj
@@ -30,5 +30,8 @@
     <Content Include="ReactionPack.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="images/homies.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
