MORE VOICES AND THEY WORK SO THERE 🤖

--- a/BotConfig.template.json
+++ b/BotConfig.template.json
@@ -5,5 +5,10 @@
             "::",
             ";;"
         ]
+    },
+    "AzureVoiceConfig":{
+        "Endpoint": "",
+        "SubscriptionKey": "",
+        "Region":""
     }
 }
