--- a/BotConfig.template.json
+++ b/BotConfig.template.json
@@ -10,5 +10,11 @@
         "Endpoint": "",
         "SubscriptionKey": "",
         "Region":""
+    },
+    "AWSConfig":{
+        "AccessKey":"",
+        "SecretKey":"",
+        "Region":"",
+        "BucketName":""
     }
 }
