--- a/homiebot.csproj
+++ b/homiebot.csproj
@@ -52,7 +52,7 @@
     <Content Include="ReactionPack.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="images/homies.jpg">
+    <Content Include="ImageMemes.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
