--- a/homiebot-web.csproj
+++ b/homiebot-web.csproj
@@ -7,9 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.5.7.4" />
-    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00771" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00771" />
-    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.0.0-nightly-00771" />
+    <PackageReference Include="DSharpPlus" Version="4.0.0" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.0.0" />
     <PackageReference Include="DSharpPlus.VoiceNext.Natives" Version="1.0.0" />
     <PackageReference Include="Google.Cloud.TextToSpeech.V1" Version="2.1.0" />
     <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.22.2.2" />
