--- a/Configs/BotConfig.json.template
+++ b/Configs/BotConfig.json.template
@@ -1,6 +1,8 @@
 {
     "BotConfig":{
         "DiscordToken":"REDACTED",
+        "UseVoice":true,
+        "UseBrain":true,
         "CommandPrefixes":[
             "::",
             ";;"
