Add switchable 🗣 and 🧠, add local image store to help the people who cannot be  ☁

--- a/Configs/BotConfig.json.template
+++ b/Configs/BotConfig.json.template
@@ -3,6 +3,7 @@
         "DiscordToken":"REDACTED",
         "UseVoice":true,
         "UseBrain":true,
+        "ImageProvider":"LocalImageStore",
         "CommandPrefixes":[
             "::",
             ";;"
@@ -10,6 +11,9 @@
         "Admins":[
             ""
         ]
+    },
+    "LocalImageStoreConfig":{
+        "ImageStorePath":"/images"
     },
     "AzureVoiceConfig":{
         "Endpoint": "",
