Inject image processors, make them switchable

--- a/Configs/BotConfig.json.template
+++ b/Configs/BotConfig.json.template
@@ -4,6 +4,7 @@
         "UseVoice":true,
         "UseBrain":true,
         "ImageProvider":"LocalImageStore",
+        "ImageProcessor":"MagickSharpImageProcessor",
         "CommandPrefixes":[
             "::",
             ";;"
