--- a/homiebot-web.csproj
+++ b/homiebot-web.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0" />
     <PackageReference Include="DSharpPlus.VoiceNext" Version="4.0.0" />
     <PackageReference Include="DSharpPlus.VoiceNext.Natives" Version="1.0.0" />
+    <PackageReference Include="FileContextCore" Version="3.4.0" />
     <PackageReference Include="Google.Cloud.TextToSpeech.V1" Version="2.1.0" />
     <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.22.2.2" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.15.1" />
