--- a/homiebot-web.csproj
+++ b/homiebot-web.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>homiebot_web</RootNamespace>
+    <EnableDefaultContentItems>False</EnableDefaultContentItems>
   </PropertyGroup>
 
   <ItemGroup>
