Add openAI start, attempt to fix deepfake stuff

--- a/Configs/BotConfig.json.template
+++ b/Configs/BotConfig.json.template
@@ -35,5 +35,9 @@
     },
     "LocalFileStorageConfig":{
         "StoragePath":"brain"
+    },
+    "OpenAIConfig":{
+        "UseOpenAI":false,
+        "OpenAIKey":""
     }
 }
