--- a/homiebot-web.csproj
+++ b/homiebot-web.csproj
@@ -31,6 +31,9 @@
     <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Configs/RESTGimmicks.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Configs/ChatGimmicks.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
