--- a/homiebot-web.csproj
+++ b/homiebot-web.csproj
@@ -7,9 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.7.101.41" />
-    <PackageReference Include="DSharpPlus" Version="4.3.0" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0" />
-    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0" />
+    <PackageReference Include="Azure.AI.TextAnalytics" Version="5.3.0-beta.1" />
+    <PackageReference Include="DSharpPlus" Version="4.4.2" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.4.2" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.4.2" />
     <PackageReference Include="DSharpPlus.VoiceNext.Natives" Version="1.0.0" />
     <PackageReference Include="FileContextCore" Version="3.4.0" />
     <PackageReference Include="Google.Cloud.TextToSpeech.V1" Version="3.1.0" />
