--- a/homiebot-web.csproj
+++ b/homiebot-web.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="FileContextCore" Version="3.4.0" />
     <PackageReference Include="Google.Cloud.TextToSpeech.V1" Version="3.4.0" />
     <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="13.6.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.38.1" />
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.39" />
     <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.36.0" />
@@ -28,7 +29,7 @@
     <PackageReference Include="NAudio" Version="2.2.1" />
     <!--<PackageReference Include="NAudio" Version="2.0.1" />-->
     <PackageReference Include="OpenAI" Version="1.10.0" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.3" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.2" />
     <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
   </ItemGroup>
