Add ignore commands so we can ignore commands for other bots easier

--- a/Configs/BotConfig.json.template
+++ b/Configs/BotConfig.json.template
@@ -12,7 +12,8 @@
         ],
         "Admins":[
             ""
-        ]
+        ],
+        "IgnoredCommands":[]
     },
     "LocalImageStoreConfig":{
         "ImageStorePath":"images"
